# prawo-jazdy

./: LICENSE  pyproject.toml
src/: prawko2anki.py
