[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patryk Żmigrodzki", email = "pzmi@users.noreply.github.com"},
]
dependencies = [
    "argparse>=1.4.0",
    "polars>=0.18.15",
    "xlsx2csv>=0.8.1",
    "pip>=23.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

